[package]
name = "slint-rust-template"
version = "0.1.0"
edition = "2021"
build = "build.rs"
description = "Diving up income into tax, owner, profit, and opex amounts."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.12.1"

[build-dependencies]
slint-build = "1.12.1"


[package.metadata.bundle]
name = "Income Divider"
identifier = "io.github.rodgtr1.profit-first-income-calculator-desktop"
description = "Diving up income into tax, owner, profit, and opex amounts."
icon = ["./icon.png", "./icon@2x.png"]
